Added post request for saving signup data, role based still remaining

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/neu-mis-info6150-fall2021/final-project-team-7#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   }
