--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_HOST=mongodb+srv://eventtracker:eventtracker@cluster0.g95yn.mongodb.net/tes
+DB_HOST=mongodb+srv://eventtracker:eventtracker@cluster0.g95yn.mongodb.net/eventtracker
 SERVER_PORT=4200
