--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
