--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
