--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "postcss": "^8",
     "postcss-import": "^14.0.2",
