--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.14",
     "node-sass": "^4.14.1",
     "postcss": "^8",
     "postcss-import": "^14.0.2",
