Adding styles for navbar. Refactoring code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "components": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -30,12 +31,14 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-hooks-lib": "^0.6.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled": "^1.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
