--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_CLIENT_ID='168488668480-hmla08j8tjo5dfq1571gfil3r0n36qig.apps.googleusercontent.com'
+REACT_APP_GOOGLE_MAPS_API_KEY="AIzaSyDud6AuQ83g4dVhz7aA0eAa4RTNqWTLTLo"
