--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_CLIENT_ID='168488668480-n7gkc020vh281l7v4ckd6lrq67rnl1l5.apps.googleusercontent.com',
+REACT_APP_CLIENT_ID='168488668480-n7gkc020vh281l7v4ckd6lrq67rnl1l5.apps.googleusercontent.com'
 REACT_APP_GOOGLE_MAPS_API_KEY="AIzaSyCavVR5CvDxf2ivYkHA3TGJMjXHOwJTWdI"
