--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled": "^1.0.0",
+    "styled-components": "^5.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
