--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
+    "react-chip-input": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
