--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.14",
     "node-sass": "^4.14.1",
     "postcss": "^8",
@@ -38,6 +39,7 @@
     "react-hooks-lib": "^0.6.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
