--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.14",
     "node-sass": "^4.14.1",
     "postcss": "^8",
     "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
